--- a/Macro_Keyboard.csproj
+++ b/Macro_Keyboard.csproj
@@ -122,7 +122,13 @@
     <Compile Include="Arduino.xaml.cs">
       <DependentUpon>Arduino.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Constants.cs" />
     <Compile Include="ConnectToArduino.cs" />
+    <Compile Include="DeviceListEntry.cs" />
+    <Compile Include="EventHandlerForDevices.cs" />
+    <Compile Include="ExampleMainPage.xaml.cs">
+      <DependentUpon>ExampleMainPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
@@ -130,6 +136,13 @@
       <DependentUpon>BackgroundPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleConfiguration.cs" />
+    <Compile Include="Scenario1_ConnectDisconnect.xaml.cs">
+      <DependentUpon>Scenario1_ConnectDisconnect.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario2_LEDTemp.xaml.cs">
+      <DependentUpon>Scenario2_LEDTemp.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SettingsStoragePage.xaml.cs">
       <DependentUpon>SettingsStoragePage.xaml</DependentUpon>
     </Compile>
@@ -138,6 +151,7 @@
     <Compile Include="SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -164,6 +178,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ExampleMainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="HomePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -171,6 +189,14 @@
     <Page Include="BackgroundPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario1_ConnectDisconnect.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario2_LEDTemp.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SettingsStoragePage.xaml">
       <SubType>Designer</SubType>
